alignment fix

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -172,6 +172,10 @@ div.friend-container.lain > a > img {
     height: 60px;
 }
 
+div.social-links > a {
+    text-align: left;
+}
+
 @media only screen and (max-width: 900px) {
     .card {
         min-width: unset;
